Feature/001 20231025 (#1)
* [기능] 테스트 코드 추가

* [기능] 테스트 코드 추가 & final 로 변경

* [기능] AOP 설정

* CommonAdvice 생성 & Enum 추가

* LogAspect -> ControllerLogAspect 로 변경

* ServiceLogAspect 생성

* Exception Advice 추가, 공통 로그 추가

* yml 파일 설정

* security & oauth2 & lombok test

* build.gradle security 다시 설정

* securityConfig

* SecurityPasswordEncoderConfig 설정 추가

* Create Class Member & Role Enum

* 회원가입 기능 추가

* 1. querydsl 설정
2. Hello test code 삭제
3. 회원가입 중복 로직 추가

* RestdocsConfig 설정

* RestdocsConfig 로직 생성

* BaseTest class  Mock 설정

* docs 문서 생성

* 인증 부분 준비 - 초기 설정

* 권한에 따라 api 호출할 수 있도록 구현

* 필요없는 코드 제거

* 로그인 기능 구현

* 권한 설정 수정

* AuthService 하드코딩 되어 있는 부분 수정

* 하드코딩 부분 수정 & Bearer 추가

* 로그인 문서화